<?xml version="1.0"?>
<package format="2">
  <name>deepgaze_ros</name>
  <version>0.0.0</version>
  <description>The ros package with deepgaze</description>

  <maintainer email="steveminq@utexas.edu">steveminq</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>villa_rude_carnie_ros</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>people_msgs</depend>
  <depend>keyboard</depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
 </package>
